Wed Mar 16 15:06:21 2011  Eric Hodel  <drbrain@segment7.net>

	* ext/openssl/lib/openssl/buffering.rb (module OpenSSL): #flush should
	  not change sync mode on exception.
	* test/openssl/test_buffering.rb: added

Sun Mar 13 16:07:58 2011  Shota Fukumori  <sorah@tubusu.net>

	* lib/pstore.rb: Fix don't raise "nested transaction" when thread_safe
	  is true. Patch by Masaki Matsushita (Glass_saga). [ruby-dev:43337]

	* test/test_pstore.rb: Test for above.
	  Patch by Masaki Matsushita (Glass_saga) [ruby-dev:43337]

Thu Mar 10 21:59:37 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* parse.y (parser_encode_length): add exception as UTF8-MAC for
	  magic comment's emacs newline specifier
	  patched by James M. Lawrence [ruby-core:35476] fixes #4489

Thu Mar 10 16:00:22 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* parse.y (parser_encode_length): fix typo: the length of
	  "-dos" and "-mac" is not 5 but 4.
	  patched by James M. Lawrence [ruby-core:35476] fixes #4489

Thu Mar 10 16:00:22 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* parse.y (parser_encode_length): fix typo: the length of
	  "-dos" and "-mac" is not 5 but 4.
	  patched by James M. Lawrence [ruby-core:35476] fixes #4489

Mon Mar  7 22:59:39 2011  Shota Fukumori  <sorah@tubusu.net>

	* lib/pstore.rb: Delete variable @transaction and fix #4474. Patch by
	  Masaki Matsushita (Glass_saga).

	* test/test_pstore.rb(test_thread_safe): Add test for #4474.

Sat Mar  5 22:54:36 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* include/ruby/intern.h: fix a typo of prototype declaration.
	  rb_mutex_try_lock -> rb_mutex_trylock [ruby-dev:43213]

Thu Mar  3 21:21:42 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/ruby/test_process.rb (test_execopts_redirect): redirecting fd
	  >= 3 is not supported on Windows, so should not specify such options
	  when calling spawn or others.

Sat May 14 12:20:22 2011  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* strftime.c (STRFTIME):  return 0 and ERANGE when precision is too